--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,24 @@ nosetests.xml
 .mr.developer.cfg
 .project
 .pydevproject
+
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode
+
+## Directory-based project format
+.idea/
+# if you remove the above rule, at least ignore user-specific stuff:
+# .idea/workspace.xml
+# .idea/tasks.xml
+# and these sensitive or high-churn files:
+# .idea/dataSources.ids
+# .idea/dataSources.xml
+# .idea/sqlDataSources.xml
+# .idea/dynamic.xml
+
+## File-based project format
+*.ipr
+*.iws
+*.iml
+
+## Additional for IntelliJ
+out/
