Clean-up, renames.

--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,7 @@ nosetests.xml
 
 ## Directory-based project format
 .idea/
+backend/.idea/
 # if you remove the above rule, at least ignore user-specific stuff:
 # .idea/workspace.xml
 # .idea/tasks.xml
